<resources>
    <string name="app_name">PronuntiApp</string>
    <string name="title_home">Home</string>
    <string name="title_esercizi">Esercizi</string>
    <string name="title_account">Account</string>
    <string name="title_aggiungi_figlio">Aggiungi Figlio</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="codicefiscale">Codice Fiscale</string>
    <string name="email_logopedista">Email logopedista</string>
    <string name="add">Aggiungi</string>
    <string name="logout">Logout</string>
    <string name="children">I tuoi figli</string>
    <string name="add_child">Aggiungi Figlio</string>
    <string name="logopedista">Logopedista</string>
    <string name="child_name">Nome Figlio</string>
    <string name="login">Accedi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Registrati</string>
    <string name="not_registered">Non sei registrato? Registrati\n</string>
    <string name="parent_registration">Registrazione\ngenitore</string>
    <string name="registration_logopedista">Registrazione\nlogopedista</string>
    <string name="register_as_logopedista">Registrati come logopedista</string>
    <string name="register_as_parent">Registrati come genitore</string>
    <string name="required_field">*Campo obbligatorio</string>
    <string name="info_child">Informazioni Figlio</string>
    <string name="request_for_logopedista_registration">Per essere abilitati come logopedista, inviare l\'email di richiesta con tutti i certificati a: pronuntiapp@info.com</string>
    <string name="bookings">Prenotazioni</string>
    <string name="logopedista_name">Nome logopedista</string>
    <string name="patients">I tuoi pazienti</string>
    <string name="add_patient">Aggiungi paziente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account_logopedista">Account logopedista</string>
    <string name="fragment_home_logopedista">Home logopedista</string>
    <string name="parent">Genitore</string>
    <string name="title_add_patient">Aggiungi paziente</string>
    <string name="info_patient">Informazioni paziente</string>
    <string name="patients_available">Pazienti disponibili</string>
    <string name="title_show_patient">Mostra Paziente</string>
    <string name="shows_available_patients">MOSTRA PAZIENTI DISPONIBILI</string>
    <string name="inserisci_la_tua_password">Inserisci la tua password</string>
    <string name="inserisci_la_tua_email">Inserisci la tua email</string>
    <string name="inserisci_una_email_valida">Inserisci una email valida</string>
    <string name="login_fallito">Login fallito</string>
    <string name="genitori">genitori</string>
    <string name="logopedisti">logopedisti</string>
    <string name="abilitazione">Abilitazione</string>
    <string name="non_ancora_abilitato_come_logopedista">Non sei stato ancora abilitato come logopedista</string>
    <string name="registrazione_avvenuta_con_successo">Registrazione avvenuta con successo</string>
    <string name="registrazione_fallita">Registrazione fallita</string>
    <string name="aggiungi_esercizio">Aggiungi esercizio</string>
    <string name="denominazione_immagini">Denominazione Immagini</string>
    <string name="ripetizione_parole">Ripetizione Parole</string>
    <string name="riconoscimento_di_coppie">Riconoscimento di Coppie</string>
    <string name="creazione_esercizio">Creazione Esercizio</string>
    <string name="immagine_dell_esercizio">Immagine dell\'esercizio</string>
    <string name="inserisci_il_testo">Inserisci il testo</string>
    <string name="contenuto_dell_immagine">Contenuto dell\'immagine</string>
    <string name="upload_audio">upload audio</string>
    <string name="inserisci_3_aiuti">Inserisci 3 aiuti</string>
    <string name="audio1">Audio1:</string>
    <string name="audio2">Audio2:</string>
    <string name="audio3">Audio3:</string>
    <string name="crea_esercizio">Crea esercizio</string>
    <string name="inserisci_un_audio_contenente_una_sequenza_di_3_parole">Inserisci un audio contenente una sequenza di 3 parole</string>
    <string name="audio">Audio:</string>
    <string name="inserisci_la_sequenza_di_parole_contenuta_nell_audio">Inserisci la sequenza di parole contenuta nell\'audio</string>
    <string name="sequenza_di_parole">Sequenza di parole</string>
    <string name="crea_esercizio_FAB">Crea esercizio</string>
    <string name="aggiunta_esercizio">Aggiunta esercizio</string>
    <string name="inserisci_la_prima_immagine">Inserisci la prima immagine</string>
    <string name="inserisci_la_seconda_immagine">Inserisci la seconda immagine</string>
    <string name="inserisci_un_audio_con_la_parola_che_si_riferisce_ad_una_delle_immagini">Inserisci un audio con la parola che si riferisce ad una delle immagini</string>
    <string name="a_quale_immagine_si_riferisce_la_parola">A quale immagine si riferisce la parola?</string>
    <string name="immagine_1">Immagine 1</string>
    <string name="immagine_2">Immagine 2</string>
    <string name="nome_esercizio">Nome esercizio</string>
    <string name="are_you">Sei un </string>
    <string name="logopedista_answer">logopedista ?</string>
    <string name="parent_answer">genitore ?</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="inserisci_il_tuo_cognome">Inserisci il tuo cognome</string>
    <string name="ripeti_la_tua_password">Ripeti la tua password</string>
    <string name="inserisci_la_tua_matricola">Inserisci la tua matricola</string>
    <string name="registrati">Registrati</string>
    <string name="hai_gi_un_account_accedi">Hai già un account? Accedi</string>
    <string name="la_tua_password_deve_contenere_almeno_6_caratteri">La tua password deve contenere almeno 6 caratteri</string>
    <string name="le_password_non_corrispondono">Le password non corrispondono</string>
    <string name="matricola">Matricola</string>
    <string name="richiesta_di_abilitazione_presa_incarico">La tua richiesta è stata presa incarico. Verrai abilitato al più presto</string>
    <string name="necessara_una_connessione_ad_internet">Per effetuare il login è necessara una connessione ad internet.</string>
    <string name="necessara_una_connessione_ad_internet_registrazione">Per effetuare la registrazione è necessara una connessione ad internet.</string>
    <string name="apri_impostazioni">Apri impostazioni</string>
    <string name="attiva_wi_fi">Attiva Wi-Fi</string>
    <string name="attiva_dati_mobili">Attiva Dati Mobili</string>
    <string name="choose_avatar">Scegli l\'avatar</string>
    <string name="age">Età</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="token_bambino">Token Bambino</string>
    <string name="n_figli">N°Figli</string>
    <string name="iscritto_da">Iscritto da</string>
    <string name="ruolo">Ruolo</string>
    <string name="n_pazienti">N° Pazienti</string>
    <string name="non_sono_stati_creati_esercizi">Non sono stati creati esercizi</string>
    <string name="nome_dell_esercizio">Nome dell\'esercizio</string>
    <string name="sottotitolo_dell_esercizio">Sottotitolo dell\'esercizio</string>
    <string name="delete_button">delete_button</string>
    <string name="esercizi_creati">Esercizi creati</string>
    <string name="descrizione_immagine"> Descrizione immagine</string>
    <string name="aiuto_1">Aiuto 1</string>
    <string name="aiuto_2">Aiuto 2</string>
    <string name="aiuto_3">Aiuto 3</string>
    <string name="aiuti_forniti">Aiuti Forniti</string>
    <string name="trascrizione">Trascrizione Audio</string>
    <string name="insert_child_information">Inserisci le informazioni</string>
    <string name="nome_e_cognome">Nome e cognome</string>
    <string name="name_label">Nome:</string>
    <string name="data_di_nascita_label">Data di nascita:</string>
    <string name="logopedista_label">Logopedista:</string>
    <string name="immagine_corretta">Immagine corretta:</string>
    <string name="email_genitore">Email genitore</string>
    <string name="aggiungi_paziente">Aggiungi paziente</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="ricerca_paziente">Ricerca paziente</string>
    <string name="codice_fiscale_label">Codice Fiscale:</string>
    <string name="email_genitore_label">Email genitore:</string>
    <string name="codice_qr_del_token">Codice QR del token</string>
    <string name="il_token_qr_un_codice_univoco_che_identifica_il_figlio_all_interno_dell_applicazione">Il token QR è un codice univoco che identifica il figlio all\'interno dell\'applicazione. Puoi condividerlo con il tuo logopedista</string>
    <string name="condividi_con">Condividi con</string>
    <string name="questo_il_qr_code_del_token_del_bambino">"Questo è il QR code del token del bambino "</string>
    <string name="per_l_applicazione_pronuntiapp">" per l'applicazione PronuntiApp."</string>
    <string name="qr_code_token_bambino_pronuntiapp">Qr code token bambino PronuntiApp</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="gioca">Gioca</string>
    <string name="esci">Esci</string>
    <string name="avvio_gioco">Avvio Gioco</string>
    <string name="dettagli">Dettagli</string>
    <string name="scegli_il_giorno_per_l_esercizio">Scegli il giorno per l\'esercizio</string>
    <string name="creazione_scheda">Creazione scheda</string>
    <string name="spiegazione_creazione_scheda">Per creare una scheda seleziona gli esercizi tenendo premuto e poi per ognuno di quelli scegli una data</string>
    <string name="crea_scheda">crea scheda</string>
    <string name="conferma">conferma</string>
    <string name="calendario">calendario</string>
    <string name="nome_scheda">Nome scheda</string>
    <string name="genitore">Genitore</string>
    <string name="schede_del_bambino_da_completare">Schede da completare:</string>
    <string name="permesso_negato">Permesso negato</string>
    <string name="per_favore_fornisci_il_permesso_per_accedere_alla_fotocamera_del_dispositivo">Per favore, fornisci il permesso per accedere alla fotocamera del dispositivo.</string>
    <string name="per_favore_fornisci_il_permesso_per_accedere_alla_galleria">Per favore, fornisci il permesso per accedere alla galleria.</string>
    <string name="sfondo_gioco">Sfondo gioco:</string>
    <string name="sfondo">sfondo</string>
    <string name="elimina">Elimina</string>
    <string name="numero_esercizi_scheda">Numero esercizi</string>
    <string name="avvia_scheda">Avvia</string>
    <string name="inserisci_tutti_i_dati_e_seleziona_un_immagine">Inserisci tutti i dati e seleziona un\'immagine</string>
    <string name="figlio_aggiunto_con_successo">Figlio aggiunto con successo</string>
    <string name="nessun_qr_code_trovato">Nessun QR Code trovato</string>
    <string name="il_paziente_gi_associato_ad_un_logopedista">Il paziente è già associato ad un logopedista</string>
    <string name="personaggio_gioco">Personaggio gioco:</string>
    <string name="stato_scheda">Stato scheda</string>
    <string name="esercizi_completati_scheda">Esercizi completati</string>
    <string name="non_sono_state_create_schede">Non sono state create schede</string>
    <string name="esercizi">"Esercizi: "</string>
    <string name="le_tue_prenotazioni">Le tue prenotazioni:</string>
    <string name="add_booking">Prenota un appuntamento</string>
    <string name="select_logopedista">Seleziona un logopedista</string>
    <string name="data_prenotazione_label">Data:</string>
    <string name="data_prenotazione">data</string>
    <string name="ora_label">Ora:</string>
    <string name="ora_prenotazione">ora</string>
</resources>