<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_aggiungi_figlio"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.aggiungi.AggiungiFiglioFragment"
        android:label="@string/title_aggiungi_figlio"
        tools:layout="@layout/aggiungi_figli_fragment" />

    <fragment
        android:id="@+id/navigation_info_figlio"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.info.InfoFiglioFragment"
        android:label="@string/info_child"
        tools:layout="@layout/fragment_dettaglio_figlio" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.esercizi.EserciziFragment"
        android:label="@string/title_esercizi"
        tools:layout="@layout/fragment_esercizi" />

    <fragment
        android:id="@+id/navigation_prenotazioni"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.prenotazioni.PrenotazioniFragment"
        android:label="@string/bookings"
        tools:layout="@layout/fragment_prenotazioni" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="it.uniba.dib.sms232419.pronuntiapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>