<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_logopedista"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard_logopedista"
        android:icon="@drawable/baseline_quiz_icon_24"
        android:title="@string/title_esercizi" />

    <item
        android:id="@+id/navigation_prenotazioni_logopedista"
        android:icon="@drawable/baseline_access_time_24"
        android:title="Prenotazioni"/>

    <item
        android:id="@+id/navigation_notifications_logopedista"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>