<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/login"
        android:textSize = "36dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/primaryGenitore"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="8dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_password_icon_24"
        android:drawablePadding="8dp"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize = "18dp"
        android:backgroundTint="@color/secondaryGenitore"/>

    <TextView
        android:id="@+id/scegli_registrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/not_registered"
        android:textColor="@color/secondaryGenitore"
        android:textSize="18dp"
        />
</LinearLayout>